2010-08-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* keyboard.h (quit_char): Add declaration.
	* process.h (QCport, QCspeed, QCprocess, QCbytesize, QCstopbits)
	(QCparity, Qodd, Qeven, QCflowcontrol, Qhw, Qsw, QCsummary): Add
	declarations.
	* sysdep.c:
	* w32.c: Remove the above declarations.

	Remove extern declarations in .c files, .h files have them.
	* xterm.c:
	* xdisp.c:
	* process.c:
	* msdos.c:
	* image.c:
	* gtkutil.c:
	* fileio.c:
	* eval.c: Remove declarations.

	* frame.c (frame_params): Make const.

	* lisp.h (fatal_error_signal, emacs_root_dir): Add declaration.

	* emacs.c (emacs_copyright, emacs_version): Make static.
	(Vinitial_window_system, Vauto_save_list_file_name)
	(Vinhibit_redisplay): Remove declarations.
	(main): Remove HAVE_SHM code, unused.  Remove _I386 conditional
	for AIX.

	Use const for some arrays and functions.
	* xterm.h (xg_set_icon_from_xpm_data):
	* xfns.c (xg_set_icon_from_xpm_data):
	* term.c (fkeys):
	* keyboard.c (lispy_accent_keys, lispy_function_keys)
	(lispy_multimedia_keys, lispy_kana_keys, iso_lispy_function_keys)
	(lispy_drag_n_drop_names, scroll_bar_parts, modify_event_symbol)
	(frame.c frame_parms):
	* emacs-icon.h (gnu_xpm_bits):
	* callint.c (callint_argfuns): Use const.

2010-08-06  Jan Djärv  <jan.h.d@swipnet.se>

	* sysdep.c: Move include term.h last of includes (Bug#6812).

2010-08-06  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (realloc_glyph_pool): Zero out newly allocated glyphs.

	* msdos.c (IT_display_cursor): Log cursor position on termscript.

	* .gdbinit (pgx): Display the avoid_cursor_p flag.

2010-08-06  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in ($(BLD)/xdisp.$(O)): Update dependencies.

2010-08-06  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.h (x_get_focus_frame): Declare.

	* keyboard.h (poll_for_input_1): Unconditionally declare.

	* nsterm.h (x_set_menu_bar_lines): Declare.

	* window.c: Don't include menu.h, it depends on lots of other .h-files.
